--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "docs": "documentation build src/index.js -f html -o docs"
+    "docs": "documentation build src/index.js -f html -o docs",
+    "test": "jest"
   },
   "dependencies": {
     "bn.js": "^4.11.0"
   },
   "devDependencies": {
-    "documentation": "^12.1.2"
+    "documentation": "^12.1.2",
+    "jest": "^24.9.0"
   }
 }
