--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "docs": "documentation build src/index.js -f html -o docs",
+    "docs": "documentation build src/index.js -f html -o .",
     "test": "jest"
   },
   "dependencies": {
