--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pooltogetherjs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "PoolTogether Client JavaScript library",
   "main": "src/index.js",
   "repository": "https://github.com/pooltogether/pooltogetherjs",
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "docs": "documentation build src/index.js -f html -o docs",
-    "test": "jest"
+    "test": "jest",
+    "postpublish" : "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
   },
   "dependencies": {
     "bn.js": "^4.11.0"
